Tests/a1/reject/15.ul
int main (int x) {
	println x x;
}